Fix button/card spacing conflict

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 .cards {
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
@@ -101,7 +102,7 @@ button:hover.tag {
 
 .control-button {
   margin-left: -5px;
-  background: linear-gradient(45deg, #0A81FF, #F91F4b);
+  background: linear-gradient(45deg, #0A81FF, #F91F4B);
   border: 2.5px solid #FFFFFF;
   color: #FFFFFF;
   font-size: 15px;
